--- a/pages/ai-chat.html
+++ b/pages/ai-chat.html
@@ -73,7 +73,7 @@
     <section id="main-content">
       <div class="container">
         <h2>AI Chatbot: Enhanced Interaction</h2>
-        <img src="https://media.istockphoto.com/id/1482901833/vector/3d-artificial-intelligence-digital-brain-neural-network-ai-servers-and-robots-technology.jpg?s=612x612&w=0&k=20&c=_vjtZ6ny54yRQDEkreIgBqkdqEgodnYgkcHIj4mwUeA=">
+        <img src="https://www.simplilearn.com/ice9/free_resources_article_thumb/Best_AI_Chatbots_in_2023.jpg" alt="Messki Logo" style="max-width: 100%; height: auto;">
         <p>
           At Messki, we are dedicated to providing an exceptional user experience, and our AI Chatbot feature is a testament to this commitment. Here's how our AI Chatbot can support you:
         </p>
