--- a/pages/messki.html
+++ b/pages/messki.html
@@ -129,7 +129,7 @@
     </section>
 
     <footer>
-      <p>Copyright © 2025 messki, </p>
+      <p>Copyright © 2025 messki</p>
     </footer>
   </div>
 
