--- a/pages/keyword-search.html
+++ b/pages/keyword-search.html
@@ -87,7 +87,7 @@
 
     <section id="main-content">
       <div class="container">
-        <h2>How Keyword Searching Works in Messki</h2>
+        <h2>How Keyword Searching</h2>
         <img src="https://media.istockphoto.com/id/1460608204/vector/3d-seo-optimization-promotion-web-browser-for-digital-marketing-website-analytics-strategy.jpg?s=612x612&w=0&k=20&c=P285zvj2umhp340_Z_tyT_E66HNyF6U-BPFknFrwx2A=" alt="Messki Logo" style="max-width: 100%; height: auto;">
         <p>
           Want to find the perfect service provider fast? That’s where keyword searching comes in—it’s like giving our app a treasure map to hunt down exactly what you need. Here’s how it works and why it’s awesome for you:
